src/test/deca/syntax/valid/SansObjet/Println-Multi.deca
// Description:
//    Printing a multiplication
//
// Results:
//    tree with x and y as branches of println
//
// Historique:
//    cree le 08/01/2022

{
        println(x * y);
}
